# accelerate-micro-benchmarks

./: .gitignore  CHANGELOG.md  accelerate-micro-benchmarks.cabal  accelerate-micro-benchmarks.cabal.save0  readme.md
benchmarking/: accelerate-micro-benchmarks.cabal  accelerate_config.sh  bench_accelerate.sh  cabal.project.decoupled  cabal.project.interleaved  cabal.project.new-pipeline  readme.md  run-all.sh  stack.yaml
benchmarking/app/: Main.hs
benchmarking/foldBench/accelerate/: bench.sh  foldBench.cabal  temp-stack.yaml
benchmarking/foldBench/accelerate/src/: Main.hs
benchmarking/generateScan/accelerate/: generateScan.cabal
benchmarking/simpleScan/accelerate/: bench.sh  simpleScan.cabal
benchmarking/simpleScan/accelerate/src/: Main.hs
benchmarking/src/: Main.hs  bench.sh  stack.yaml
benchmarks/: Main.hs
