cabal-version:      3.0
name:               accelerate-micro-benchmarks
version:            0.1.0.0

license:            NONE
author:             miloravi
maintainer:         57906122+miloravi@users.noreply.github.com

build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable accelerate-micro-benchmarks
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base,
                      accelerate,
                      accelerate-llvm,
                      accelerate-llvm-native,
                      llvm-pretty,
                      criterion

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010
    